# fractal-creator

./: .gitignore  Bitmap.cpp  Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  CMakeLists.txt  FractalCreator.cpp  FractalCreator.h  Mandelbrot.cpp  Mandelbrot.h  RGB.cpp  RGB.h  Zoom.cpp  Zoom.h  ZoomList.cpp  ZoomList.h  main.cpp
